add popup follow
